[package]
name = "macho2"
description = "A better MachO parser library"
license = "GPL-3.0"
version = "0.1.2"
homepage = "https://github.com/PandasAreBears/macho2"
documentation = "https://docs.rs/macho2/latest/macho2/"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
nom = "7.1.3"
nom-derive = "0.10.1"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = "1.13.1"
